--- a/View/DetailsPage.xaml
+++ b/View/DetailsPage.xaml
@@ -126,16 +126,16 @@
                            Padding="1">
                             <ScrollView IsVisible="{Binding IsVis}">
                                 <VerticalStackLayout>
-                                    <Grid ColumnDefinitions="*,Auto,*"
-                                          RowDefinitions="105,Auto,Auto">
+                                    <Grid ColumnDefinitions="Auto,*,Auto,*"
+                                          RowDefinitions="105,Auto,Auto,Auto">
                                         <BoxView BackgroundColor="White"
                                                  HorizontalOptions="Fill"
-                                                 Grid.ColumnSpan="3"
+                                                 Grid.ColumnSpan="4"
                                                  HeightRequest="100"
                                                  VerticalOptions="Start"
                                                  Margin="2,0,0,0"/>
                                         <Image Source="{Binding Pokemon.Img}"
-                                               Grid.ColumnSpan="3"
+                                               Grid.ColumnSpan="4"
                                                HeightRequest="80"
                                                WidthRequest="80"
                                                HorizontalOptions="Center"
@@ -143,14 +143,32 @@
                                                Margin="0,10,0,0"/>
                                         <Label Text="{Binding Pokemon.Name}"
                                                Grid.Row="1"
-                                               Grid.ColumnSpan="3"
+                                               Grid.ColumnSpan="4"
                                                HorizontalOptions="Center"
                                                FontSize="20"
-                                               Margin="0,0,0,0"/>
-                                        <Label Text="{Binding Pokemon.Description}"
-                                               Grid.ColumnSpan="3"
+                                               Margin="0,0,0,5"/>
+                                        <Label Text="Height:"
+                                               Grid.Column="0"
                                                Grid.Row="2"
-                                               Margin="3,0,0,0"/>
+                                               Margin="3,0,0,0"
+                                               HorizontalOptions="Start"/>
+                                        <Label Text="{Binding Pokemon.Height}"
+                                               Grid.Column="1"
+                                               Grid.Row="2"
+                                               HorizontalOptions="Center"/>
+                                        <Label Text="Weight:"
+                                               Grid.Column="2"
+                                               Grid.Row="2"
+                                               HorizontalOptions="End"/>
+                                        <Label Text="{Binding Pokemon.Weight}"
+                                               Grid.Column="3"
+                                               Grid.Row="2"
+                                               HorizontalOptions="Center"/>
+                                        <Label Text="{Binding Pokemon.Description}"
+                                               Grid.ColumnSpan="4"
+                                               Grid.Row="3"
+                                               Margin="3,10,0,0"/>
+
                                         <Button ImageSource="back_button.png"
                                                 HeightRequest="40"
                                                 WidthRequest="40"
